src/objects/Geographic_Territory__c.object
<CustomObject>
    <description>This object defines geographic territories by zip code.</description>
    <fields>
        <fullName>City__c</fullName>
        <description>The city of the territory</description>
        <inlineHelpText>Enter the city for the territory</inlineHelpText>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County_Code__c</fullName>
        <description>The three digit county code identified by the Federal Information Processing Standard (FIPS)</description>
        <inlineHelpText>Enter the three digit FIPS county code</inlineHelpText>
        <label>County Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County_ID__c</fullName>
        <description>A five digit value created by combining the Federal Information Processing Standard (FIPS) codes for the State (2 digits) and the County (3 digits). This produces a value that uniquely identifies a County.</description>
        <formula>State_Code__c +  County_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This value is a combination of the State FIPS code and the County FIPS code. It is a 5 digit value that uniquely represents a county.</inlineHelpText>
        <label>County ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <description>The county for the territory</description>
        <inlineHelpText>Enter the county for the territory</inlineHelpText>
        <label>County</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <description>The postal code for the territory</description>
        <externalId>true</externalId>
        <inlineHelpText>Enter the postal code for the territory</inlineHelpText>
        <label>Postal Code</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>State_Code__c</fullName>
        <description>The two digit state code identified by the Federal Information Processing Standard (FIPS)</description>
        <inlineHelpText>Enter the two digit FIPS state code</inlineHelpText>
        <label>State Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>A picklist of abbreviated states for the US only</description>
        <inlineHelpText>Select the state for the territory</inlineHelpText>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>US_States</valueSetName>
        </valueSet>
    </fields>
    <label>Geographic Territory</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>State_Code__c</columns>
        <columns>County__c</columns>
        <columns>County_ID__c</columns>
        <columns>Postal_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>MN</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Geographic Territory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geographic Territories</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>